# tobor-games

./: .clang-format  .gitignore  .gitmodules  CMakeLists-Qt5-win.txt  CMakeLists-lin.txt  CMakeLists.txt  Dev-Doxyfile  Doxyfile  README.md  azure-pipelines.yml  build.sh  init_project_and_script_files.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manual_tests.md  resources.qrc  svg_handler.cpp  svg_handler.h
doxy-build/: .gitignore
script/: cc-cmd-clean.bat  cccpb-cmd-clean-create-project-build.bat  ub-cmd-build.sh  ub-unix-build.sh  uc-cmd-clean.sh  uc-unix-clean.sh  uccpb-cmd-clean-create-project-build.sh  uccpb-unix-clean-create-project-build.sh  uci-unix-clean_init.sh  ucp-unix-create-project.sh  ucp2-unix-create-project-clang.sh  udg-unix-create-include-dependency-graph.sh  uf-unix-format.sh  ugcus-win-git-clean-update-submodules.sh  uobe-unix-build-only-executable.sh  ur-unix-run.sh  ut-unix-test.sh  wc-win-clean.ps1  wccpb-win-clean-create-project-build.ps1  wci-win-clean_init.ps1  wcp-win-create-project.ps1  wgcus-win-git-clean-update-submodules.ps1  wos-win-open-sln.ps1  wt-win-test.ps1
script/ci/: create-deploy-include-dependency-graph.sh
src/: CMakeLists.txt  Random.h  abstract_game_controller.h  abstract_game_factory.h  all_models.h  all_solver.h  cli.cpp  cli.h  color_generator.cpp  color_generator.h  custom_traits.cpp  custom_traits.h  cyclic_group_game_factory.h  debug_utils.cpp  debug_utils.h  default_models_1_0.h  default_models_1_1.h  engine.h  engine_typeset.h  game_controller.cpp  game_controller.h  game_factory.h  gui_helper.h  gui_interactive_controller.cpp  gui_interactive_controller.h  internal_error.h  key_event_filter.cpp  key_event_filter.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  math.h  models.h  models_1_0.h  models_1_1.h  original_game_factory.h  predefined.h  (+18 more)
src/engine/: bigraph_operations.h  byte_tree_distance_exploration.h  byte_tree_map.h  digraph_operations.h  distance_exploration.h  exploration_policy.h  legacy_move_engine.h  legacy_quick_move_cache.h  move_engine.h  partial_state_graph.h  path_classificator.h  prettiness_evaluator.h  quick_move_cache.h  sorted_level_distance_exploration.h  state_graph_node.h
src/fsl/: fast_vector_allocator.h  i_to_std_string.h
src/fsl/concrete/: stringval.h
src/fsl/container/: byte_tree_map.h  bytewise.h
src/fsl/interface/: cloneable.h  stringable.h
src/fsl/rudi/macros/: list.h
src/gui/: gui_helper.h  license_dialog.cpp  license_dialog.h  main_menu.h  text_input_dialog.cpp  text_input_dialog.h
src/license/: license.h
src/models/: augmented_positions_of_pieces.h  direction.h  dynamic_rectangle_world.h  errors.h  id_polarisation.h  legacy_move_path.h  legacy_world.h  min_size_cell_id.h  move_path.h  piece_id.h  piece_move.h  pieces_quantity.h  positions_of_pieces.h  redundant_cell_id.h  simple_state_bigraph.h  simple_state_digraph.h  state_path.h  wall.h
src/svg/res/: swan.h
src/svggen/: compound.h  path.h  path_command.h  piece_drawer.h  style_sheet.h  xml_declaration.h  xml_root_element.h
src/svggen/path_commands/: M.h  Z.h  a.h  c.h  l.h
src/svggen/piece_drawer/: duck.h  spiky_ball.h
test/: CMakeLists.txt  default_models_1_0.h  default_models_1_1.h  default_solver_1_0.h  default_solver_1_1.h  example_test.cpp  info.cpp  info.h  test_engine.cpp  test_generator.cpp  test_main.cpp  test_models_1_0.cpp  test_models_1_1.cpp  test_solver_1_0.cpp
